<?xml version="1.0"?>
<package format="2">
  <name>pyvoyis_ros</name>
  <version>0.0.1</version>
  <description>ROS wrapper for pyvoyis.</description>
  <maintainer email="miquel.massot-campos@soton.ac.uk">Miquel Massot</maintainer>
  <license>GPLv3</license>
  <!-- <url type="website">http://wiki.ros.org/remote_awareness</url> -->
  <author email="miquel.massot-campos@soton.ac.uk">Miquel Massot</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <export>
  </export>
</package>
